# vf

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs
schema/: vf.ttl
src/: gen.rs  lib.rs  ser.rs
