[package]
name = "vf"
version = "0.1.0"
authors = ["Andrew Danger Lyon <orthecreedence@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.11"
serde = "1.0.105"
serde_derive = "1.0.106"
url = "2.1.1"

[build-dependencies]
heck = "0.3.1"
serde = "1.0.105"
serde_derive = "1.0.106"
serde_json = "1.0.50"
url = "2.1.1"

